main.css
h1 {
    background-color:  rgba(0, 36, 0, 0); 
    font-weight: 1000;
    letter-spacing: 3px;
    text-decoration: underline; 
    text-decoration-style: solid;
    text-decoration-color: rgb(0, 0, 0);
    display: inline-block;
    margin-bottom: 0;
    
}

h2 {
    background-color:  rgba(0, 36, 0, 0); 
    font-weight: 1000;
    letter-spacing: 3px;
    text-decoration: underline; 
    text-decoration-style: solid;
    text-decoration-color: rgb(0, 0, 0);
   
    
}




.alpha {
    background: rgb(25,138,23);
background: linear-gradient(90deg, rgba(25,138,23,1) 23%, rgba(144,232,134,1) 67%, rgba(254,255,255,1) 100%);
    
}

* {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-weight: 700;
}

#description {
    padding-bottom: 10px;
    padding-top: 15px;
    margin: 0;
}

#list1 {
    border: 5px solid rgb(0, 0, 0);
    
    width: 220px;
    height: 80px;
    border-radius: 10px;
    padding-top: 10px;
}

#list1 li {

    padding-bottom: 10px;

}

#listitem1:hover {
    font-size: 105%;
    color: rgb(0, 99, 0);
}

#listitem2:hover {
    font-size: 105%;
    color: rgb(0, 99, 0);
}

#listitem3:hover {
    font-size: 105%;
    color: rgb(0, 99, 0);
}

footer {
    background: rgb(48, 51, 48); 
    text-align: center;
    color: white;
    position: fixed;
    padding: 0;
    left: 0;
    bottom: 0;
    width: 100%;


}

